[package]
authors = [
  "nemo <nemo@protocol.ai>",
  "dignifiedquire <me@dignifiedquire.com>",
  "laser <l@s3r.com>",
]
description = "FFI Interface to Filecoin Proofs"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "filcrypto"
publish = false
readme = "README.md"
repository = "https://github.com/EntropyPool/filecoin-ffi"
resolver = "2"
version = "0.7.5"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
actors-v7 = {package = "fil_builtin_actors_bundle", version = "~7.5.1"}
anyhow = "1.0.23"
bellperson = {version = "0.21", default-features = false}
bls-signatures = {version = "0.11.0", default-features = false, features = [
  "blst",
]}
blstrs = "0.4"
byteorder = "1.2"
cid = {version = "0.8.3", features = ["serde-codec"]}
ff = {version = "0.3.1", package = "fff"}
fil_logger = "0.1.0"
filepath = "0.1.1"
fr32 = {version = "~4.1", default-features = false}
futures = "0.3.5"
fvm = {version = "1.0.0-rc.3", default-features = false}
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_car = "0.4.1"
fvm_ipld_encoding = "0.2.2"
fvm_shared = "0.8.0"
group = "0.11"
lazy_static = "1.4.0"
libc = "0.2.58"
log = "0.4.7"
memmap = "0.7"
num-bigint = "0.4"
num-traits = "0.2.14"
once_cell = "1.9.0"
rand = "0.8"
rand_chacha = "0.3.1"
rayon = "1.2.1"
reqwest = {version = "0.11.9", features = ["blocking", "json"]}
rust-gpu-tools = {version = "0.5", default-features = false}
safer-ffi = {version = "0.0.7", features = ["proc_macros"]}
serde = "1.0.117"
serde_bytes = "0.11.5"
serde_json = "1.0.46"
serde_tuple = "0.5"
storage-proofs-porep = {version = "~11.1", default-features = false}

filecoin-proofs-api = {path = "../../rust-filecoin-proofs-api", version = "11.1", default-features = false}
filecoin-webapi = {path = "../../filecoin-webapi", default-features = false}

[dev-dependencies]
tempfile = "3.0.8"

[patch.crates-io]
bellperson = {path = "../../bellperson", default-features = false, features = [
  "opencl",
]}
filecoin-hashers = {path = "../../rust-fil-proofs/filecoin-hashers", default-features = false}
filecoin-proofs = {path = "../../rust-fil-proofs/filecoin-proofs", default-features = false}
filecoin-proofs-api = {path = "../../rust-filecoin-proofs-api", default-features = false}
fr32 = {path = "../../rust-fil-proofs/fr32", default-features = false}
merkletree = {path = "../../merkletree"}
sha2raw = {path = "../../rust-fil-proofs/sha2raw"}
storage-proofs-core = {path = "../../rust-fil-proofs/storage-proofs-core"}
storage-proofs-porep = {path = "../../rust-fil-proofs/storage-proofs-porep"}
storage-proofs-post = {path = "../../rust-fil-proofs/storage-proofs-post"}
storage-proofs-update = {path = "../../rust-fil-proofs/storage-proofs-update"}

wasmtime = {git = "https://github.com/filecoin-project/wasmtime", branch = "fix/sse-feature"}

[features]
blst-portable = ["bls-signatures/blst-portable", "blstrs/portable"]
c-headers = ["safer-ffi/headers"]
cuda = [
  "filecoin-proofs-api/cuda",
  "bellperson/cuda",
  "storage-proofs-porep/cuda",
  "rust-gpu-tools/cuda",
  "fvm/cuda",
]
default = ["opencl", "multicore-sdr"]
multicore-sdr = ["storage-proofs-porep/multicore-sdr"]
opencl = [
  "filecoin-proofs-api/opencl",
  "bellperson/opencl",
  "storage-proofs-porep/opencl",
  "rust-gpu-tools/opencl",
  "fvm/opencl",
]
