[package]
authors = [
  "nemo <nemo@protocol.ai>",
  "dignifiedquire <me@dignifiedquire.com>",
  "laser <l@s3r.com>",
]
description = "FFI Interface to Filecoin Proofs"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "filcrypto"
publish = false
readme = "README.md"
repository = "https://github.com/EntropyPool/filecoin-ffi"
resolver = "2"
version = "0.7.5"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
bls-signatures = { version = "0.12.0", default-features = false, features = [
  "blst",
] }
blstrs = "0.5"
byteorder = "1.4.3"
ff = "0.12.0"
filepath = "0.1.1"
group = "0.12"
libc = "0.2.58"
log = "0.4.7"
fil_logger = "0.1.6"
rand = "0.8"
rand_chacha = "0.3.1"
rayon = "1.2.1"
anyhow = "1.0.23"
bellperson = { version = "0.21.1", default-features = false }
serde_json = "1.0.46"
memmap = "0.7"
rust-gpu-tools = { version = "0.5", optional = true, default-features = false }
storage-proofs-porep = { version = "~12.0", default-features = false }
fr32 = { version = "~5.0", default-features = false }
fvm = { version = "2.0.0", default-features = false }
fvm_shared = "2.0.0"
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_encoding = "0.2.2"
num-traits = "0.2.14"
num-bigint = "0.4"
cid = { version = "0.8.5", features = ["serde-codec"] }
lazy_static = "1.4.0"
once_cell = "1.9.0"
serde = "1.0.117"
serde_bytes = "0.11.5"
serde_tuple = "0.5"

filecoin-proofs-api = { path = "../../rust-filecoin-proofs-api", version = "12.0", default-features = false }
filecoin-webapi = { path = "../../filecoin-webapi", default-features = false }
safer-ffi = { version = "0.0.7", features = ["proc_macros"] }

[dev-dependencies]
tempfile = "3.0.8"

[patch.crates-io]
bellperson = { path = "../../bellperson", default-features = false, features = [
  "opencl",
] }
filecoin-hashers = { path = "../../rust-fil-proofs/filecoin-hashers", default-features = false }
filecoin-proofs = { path = "../../rust-fil-proofs/filecoin-proofs", default-features = false }
filecoin-proofs-api = { path = "../../rust-filecoin-proofs-api", default-features = false }
fr32 = { path = "../../rust-fil-proofs/fr32", default-features = false }
merkletree = { path = "../../merkletree" }
sha2raw = { path = "../../rust-fil-proofs/sha2raw" }
storage-proofs-core = { path = "../../rust-fil-proofs/storage-proofs-core" }
storage-proofs-porep = { path = "../../rust-fil-proofs/storage-proofs-porep" }
storage-proofs-post = { path = "../../rust-fil-proofs/storage-proofs-post" }
storage-proofs-update = { path = "../../rust-fil-proofs/storage-proofs-update" }

wasmtime = { git = "https://github.com/filecoin-project/wasmtime", branch = "fix/sse-feature" }

[features]
default = ["opencl", "multicore-sdr"]
blst-portable = ["bls-signatures/blst-portable", "blstrs/portable"]
opencl = [
  "filecoin-proofs-api/opencl",
  "bellperson/opencl",
  "storage-proofs-porep/opencl",
  "rust-gpu-tools/opencl",
  "fvm/opencl",
]
cuda = [
  "filecoin-proofs-api/cuda",
  "bellperson/cuda",
  "storage-proofs-porep/cuda",
  "rust-gpu-tools/cuda",
  "fvm/cuda",
]
multicore-sdr = ["storage-proofs-porep/multicore-sdr"]
c-headers = ["safer-ffi/headers"]
