[package]
authors = [
  "nemo <nemo@protocol.ai>",
  "dignifiedquire <me@dignifiedquire.com>",
  "laser <l@s3r.com>",
]
description = "FFI Interface to Filecoin Proofs"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "filcrypto"
publish = false
readme = "README.md"
repository = "https://github.com/EntropyPool/filecoin-ffi"
resolver = "2"
version = "0.7.5"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
bls-signatures = { version = "0.13.0", default-features = false, features = ["blst"] }
blstrs = "0.6"
byteorder = "1.4.3"
filepath = "0.1.1"
group = "0.12"
libc = "0.2.58"
log = "0.4.7"
fil_logger = "0.1.6"
rand = "0.8"
rand_chacha = "0.3.1"
rayon = "1.2.1"
anyhow = "1.0.23"
serde_json = "1.0.46"
rust-gpu-tools = { version = "0.6", optional = true, default-features = false }
fr32 = { version = "~6.0", default-features = false }
fvm3 = { package = "fvm", version = "~3.2", default-features = false }
fvm3_shared = { package = "fvm_shared", version = "~3.2" }
fvm3_ipld_encoding = { package = "fvm_ipld_encoding", version = "0.3.3" }
fvm2 = { package = "fvm", version = "~2.3", default-features = false }
fvm2_shared = { package = "fvm_shared", version = "~2.3" }
fvm2_ipld_encoding = { package = "fvm_ipld_encoding", version = "0.2.3" }
fvm_ipld_blockstore = "0.1.1"
num-traits = "0.2.14"
cid = { version = "0.8.5", features = ["serde-codec"] }
lazy_static = "1.4.0"
serde = "1.0.117"
serde_tuple = "0.5"
safer-ffi = { version = "0.0.7", features = ["proc_macros"] }

filecoin-proofs-api = { path = "../../rust-filecoin-proofs-api", version = "14.0", default-features = false }
filecoin-webapi = { path = "../../filecoin-webapi", default-features = false }

[dev-dependencies]
memmap2 = "0.5"
tempfile = "3.0.8"

[patch.crates-io]
filecoin-hashers = { path = "../../rust-fil-proofs/filecoin-hashers", default-features = false }
filecoin-proofs = { path = "../../rust-fil-proofs/filecoin-proofs", default-features = false }
filecoin-proofs-api = { path = "../../rust-filecoin-proofs-api", default-features = false }
fr32 = { path = "../../rust-fil-proofs/fr32", default-features = false }
merkletree = { path = "../../merkletree" }
bellperson = { path = "../../bellperson", version = "0.22", default-features = false }
ec-gpu = { path = "../../ec-gpu/ec-gpu", version = "0.1.0" }
ec-gpu-gen = { path = "../../ec-gpu/ec-gpu-gen", version = "0.3.1", default-features = false, features = ["fft", "multiexp"] }
sha2raw = { path = "../../rust-fil-proofs/sha2raw" }
storage-proofs-core = { path = "../../rust-fil-proofs/storage-proofs-core" }
storage-proofs-porep = { path = "../../rust-fil-proofs/storage-proofs-porep" }
storage-proofs-post = { path = "../../rust-fil-proofs/storage-proofs-post" }
storage-proofs-update = { path = "../../rust-fil-proofs/storage-proofs-update" }

wasmtime = { git = "https://github.com/filecoin-project/wasmtime", branch = "fix/sse-feature" }

[features]
default = ["opencl", "multicore-sdr"]
blst-portable = ["bls-signatures/blst-portable", "blstrs/portable"]
opencl = ["filecoin-proofs-api/opencl", "rust-gpu-tools/opencl", "fvm3/opencl", "fvm2/opencl"]
cuda = ["filecoin-proofs-api/cuda", "rust-gpu-tools/cuda", "fvm3/cuda", "fvm2/cuda"]
multicore-sdr = ["filecoin-proofs-api/multicore-sdr"]
c-headers = ["safer-ffi/headers"]
